<resources>
    <string name="app_name">RepItOut</string>
    <string name="Message">Enter your Login Details</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="logBtn">Log in</string>
    <string name="registerBtn">Register</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_Workout_Routines">Workout Routines</string>
    <string name="menu_Exercises">Exercises</string>
    <string name="menu_My_Profile">My Profile</string>
    <string name="Menu_Progress">View Progress</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_register">Register</string>
    <string name="Details">Please enter your details</string>
    <string name="ProfileNameTV">Name</string>
    <string name="ProfilePhoneTV">Phone</string>
    <string name="logPassword">Password</string>
    <string name="confPassword">Confirm Password</string>
    <string name="btnUserReg">Register</string>
    <string name="title_activity_nav_main">nav_main</string>
    <string name="menu_feedback">Feedback</string>
    <string name="Rep_It_Out">Rep It Out</string>
    <string name="test">test</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello">hello</string>
    <string name="title">title</string>
    <string name="link">link</string>
    <string name="profile">Profile</string>
    <string name="tell_us_more_about_yourself">Tell us more about yourself</string>
    <string name="age">Age</string>
    <string name="weight">weight</string>
    <string name="save">save</string>
    <string name="current_age">Current Age</string>
    <string name="height">Height</string>
    <string name="current_weight">Current Weight</string>
    <string name="update_stats">Update stats</string>
    <string name="enter_your_latest_figures">Enter your latest figures</string>
    <string name="confirm">confirm</string>
    <string name="select_date">Select date</string>
    <string name="add_workout">Add Workout</string>
    <string name="routine_name">Routine Name</string>
    <string name="date">Date</string>
    <string name="create_new_routine">Create New Routine</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="next">Next</string>
    <string name="plus">+</string>
    <string name="view_routines">View Routines</string>
    <string name="routine">Routine</string>
    <string name="date_created">Date Created :</string>
    <string name="exercise">Exercise :</string>
    <string name="set">set :</string>
    <string name="reps">Reps :</string>
    <string name="count_reps">Count Reps</string>
    <string name="your_routines">Your Routines</string>
    <string name="waiting_for_reps">waiting for reps...</string>
    <string name="counted">Reps counted</string>
    <string name="record_your_reps">Record your reps</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="add_sets_and_reps">Add Sets and Reps</string>
    <string name="total_reps">Total Reps</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="edit_exercise_selection">Edit exercise selection</string>
    <string name="day">Day</string>
    <string name="reps_recorded">Reps Recorded</string>
    <string name="start_workout">Start Workout</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="sign_out">Sign Out</string>
    <string name="Set">Set :</string>
    <string name="Weight">Weight</string>
    <string name="recent_workouts">Recent Workouts</string>
    <string name="previous_session">Previous Session :</string>
    <string name="previous_session_reps">Previous Session Reps :</string>
    <string name="save_routine">Save Routine</string>
    <string name="workout_history">Workout History</string>
    <string name="update_profile">Update Profile</string>


</resources>
