<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.repitout.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.repitout.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.repitout.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.repitout.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.repitout.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.repitout.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_routines"
        android:name="com.example.repitout.ui.routines.RoutinesFragment"
        android:label="@string/menu_Workout_Routines"
        tools:layout="@layout/routines_fragment" />

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.example.repitout.ui.exercises.ExercisesFragment"
        android:label="@string/menu_Exercises"
        tools:layout="@layout/exercises_fragment" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.repitout.ui.profile.ProfileFragment"
        android:label="@string/menu_My_Profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_my_progress"
        android:name="com.example.repitout.ui.progress.ProgressFragment"
        android:label="@string/Menu_Progress"
        tools:layout="@layout/progress_fragment" />
</navigation>