<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".User_details">

    <TextView
        android:id="@+id/User_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_latest_figures"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/User_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/Height_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/Weight_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Height_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/weight" />

    <Button
        android:id="@+id/detailsBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Weight_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textColor="#ffffff" />

</RelativeLayout>