<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".CreateRoutines">


    <TextView
        android:id="@+id/newRoutineTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="16dp"
        android:text="@string/create_new_routine"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/newRoutineTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newRoutineTV"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/day_of_the_week"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <Spinner
        android:id="@+id/Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newRoutineTV2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_wihte_frame"
        android:inputType="textPersonName"
        android:text="@string/routine_name"
        android:textColor="#ffffff" />


    <TextView
        android:id="@+id/addExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Spinner"
        android:layout_alignStart="@+id/Spinner"
        android:layout_marginTop="25dp"
        android:text="@string/add_exercises"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/addExercises"
        android:id="@+id/addExercisesBtn"
        android:background="@android:color/transparent"
        android:layout_alignBaseline="@+id/addExercises"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/excersizesTV"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addExercises"
        android:layout_alignStart="@+id/Spinner"
        android:dividerHeight="2dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/saveRoutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#ffffff" />


</RelativeLayout>