<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="35dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="330dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/Message"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:radius="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/logPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@id/logEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_below="@id/logPassword"
            android:paddingTop="30dp"
            android:layout_centerHorizontal="true"
            >


            <Button
                android:id="@+id/logBtn"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/logBtn"
                android:textSize="16sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/registerBtn"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>