<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/colorPrimary"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/exercise"
            android:id="@+id/excTV"
            android:textAlignment="center"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rLSets"
            android:layout_below="@+id/excTV"
            android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/set"
            android:id="@+id/setSetsTV"

            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/setSetsTV"
                android:layout_marginLeft="10dp"
                android:id="@+id/TVsetsNumber"
                android:text="0"
                android:textSize="20sp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rLReps"
            android:layout_below="@+id/rLSets"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/reps"
                android:id="@+id/setRepsTV"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/setRepsTV"
                android:layout_marginLeft="10dp"
                android:id="@+id/TVRepsNumber"
                android:text="0"
                android:textSize="20sp"/>


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rLReps"
            android:layout_marginTop="15dp"
            android:text="@string/count_reps"
            android:layout_centerHorizontal="true"
            android:id="@+id/countReps_Btn"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>