<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/RL"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/background_color">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/Iv_Profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:onClick="handleImageClick"
            android:src="@drawable/avatar"
            app:civ_border_color="#3f51b5"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Iv_Profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/profile"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RL">

        <LinearLayout
            android:id="@+id/lLAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_wihte_frame_round"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/ageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/age"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fbAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lLAge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_wihte_frame_round"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/HeightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageTv"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/height"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fbHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageTv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lLHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_wihte_frame_round"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/weightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HeightTv"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/weight"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fbWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HeightTv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/update_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lLWeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/update_stats"
            android:textColor="#ffffff"

            />


    </RelativeLayout>

</RelativeLayout>